editor web config

--- a/data/editor.config
+++ b/data/editor.config
@@ -1,9 +1,9 @@
+<?xml version="1.0"?>
 <mapsme>
   <editor>
     <disable everywhere="no">
       <!--bbox minlon="37.6120" minlat="55.7479" maxlon="37.6239" maxlat="55.7553" editable="no" /-->
     </disable>
-
     <fields>
       <!-- Core fields of a feature. -->
       <field name="name" multilanguage="yes">
@@ -123,7 +123,6 @@
         <field_ref name="website" />
       </field_group>
     </fields>
-
     <!-- Types should be sorted by their priority. -->
     <!-- Buildings are hardcoded in editor_config.cpp and are mixed with any other type. -->
     <types>
@@ -337,8 +336,7 @@
       <type id="amenity-waste_disposal">
         <include field="operator" />
       </type>
-      <type id="amenity-waste_basket">
-      </type>
+      <type id="amenity-waste_basket" />
       <type id="amenity-car_wash">
         <include group="poi" />
         <include field="internet" />
@@ -742,13 +740,11 @@
         <include field="height" />
         <include field="wikipedia" />
       </type>
-      <type id="amenity-bench">
-      </type>
+      <type id="amenity-bench" />
       <type id="amenity-shelter">
         <include field="internet" />
       </type>
-      <type id="tourism-picnic_site">
-      </type>
+      <type id="tourism-picnic_site" />
       <type id="amenity-brothel" can_add="no">
         <include group="poi" />
         <include field="internet" />
@@ -781,10 +777,8 @@
       <type id="leisure-sauna">
         <include group="poi" />
       </type>
-      <type id="man_made-chimney">
-      </type>
-      <type id="man_made-water_well">
-      </type>
+      <type id="man_made-chimney" />
+      <type id="man_made-water_well" />
       <type id="shop-cosmetics" group="shop">
         <include group="poi" />
       </type>
@@ -871,7 +865,6 @@
         <include group="address" />
       </type>
     </types>
-
     <preferred_types>
       <type id="amenity-restaurant" />
       <type id="amenity-cafe" />
