--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ find_package(Threads)
 
 get_filename_component(PROJECT_SOURCE_DIR . ABSOLUTE)
 
-include_directories(${CMAKE_HOME_DIRECTORY} ${PROJECT_SOURCE_DIR}/3party/jansson/src)
+include_directories(${CMAKE_HOME_DIRECTORY})
 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})
 set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})
@@ -53,5 +53,7 @@ endfunction()
 
 
 add_subdirectory(base)
+add_subdirectory(coding)
+add_subdirectory(editor)
 add_subdirectory(geometry)
 add_subdirectory(storage)
