Decimated spaces in the CMake files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,24 +14,24 @@ find_package(Qt5Gui REQUIRED)
 find_package(Qt5Widgets REQUIRED)
 
 if (APPLE)
-    find_library(APL_SYSCON SystemConfiguration)
+  find_library(APL_SYSCON SystemConfiguration)
 endif()
 
 find_library(LIBZ NAMES z)
 if (LIBZ STREQUAL "LIBZ-NOTFOUND")
-   message(FATAL_ERROR "Failed to find libz library.")
+  message(FATAL_ERROR "Failed to find libz library.")
 endif()
 
 
 get_filename_component(OMIM_DIR . ABSOLUTE)
 
 include_directories(
-    ${CMAKE_HOME_DIRECTORY}
-    ${Qt5Core_LIBRARIES}
-    ${Qt5Core_INCLUDE_DIRS}
-    ${Qt5Network_LIBRARIES}
-    ${Qt5Network_INCLUDE_DIRS}
-    "${CMAKE_HOME_DIRECTORY}/3party/boost"
+  ${CMAKE_HOME_DIRECTORY}
+  ${Qt5Core_LIBRARIES}
+  ${Qt5Core_INCLUDE_DIRS}
+  ${Qt5Network_LIBRARIES}
+  ${Qt5Network_INCLUDE_DIRS}
+  ${CMAKE_HOME_DIRECTORY}/3party/boost
 )
 
 # Set environment variables
@@ -40,15 +40,15 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})
 set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})
 
 if ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
-    add_definitions(-DDEBUG)
+  add_definitions(-DDEBUG)
 endif()
 
-if ("${CMAKE_BUILD_TYPE}" STREQUAL "")
-    set(CMAKE_BUILD_TYPE "Release")
+if (NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE "Release")
 endif()
 
-if ("${NO_TESTS}" STREQUAL "")
-    set(NO_TESTS FALSE)
+if (NOT NO_TESTS)
+  set(NO_TESTS FALSE)
 endif()
 
 # End of setting environment variables
@@ -56,22 +56,22 @@ endif()
 # Set target platform:
 
 function(omim_set_platform_var PLATFORM_VAR pattern)
-    set(${PLATFORM_VAR} FALSE PARENT_SCOPE)
+  set(${PLATFORM_VAR} FALSE PARENT_SCOPE)
 
-    if ("${PLATFORM}" STREQUAL "")
-        if (${ARGN})
-            list(GET ARGN 0 default_case)
-            if (${default_case})
-                set(${PLATFORM_VAR} TRUE PARENT_SCOPE)
-                message("Setting ${PLATFORM_VAR} to true")
-            endif()
-        endif()
-    else()
-        message("Platform: ${PLATFORM}")
-        if (${PLATFORM} MATCHES ${pattern})
-            set(${PLATFORM_VAR} TRUE PARENT_SCOPE)
-        endif()
+  if (NOT PLATFORM)
+    if (${ARGN})
+      list(GET ARGN 0 default_case)
+      if (${default_case})
+        set(${PLATFORM_VAR} TRUE PARENT_SCOPE)
+        message("Setting ${PLATFORM_VAR} to true")
+      endif()
     endif()
+  else()
+    message("Platform: ${PLATFORM}")
+    if (${PLATFORM} MATCHES ${pattern})
+      set(${PLATFORM_VAR} TRUE PARENT_SCOPE)
+    endif()
+  endif()
 endfunction()
 
 omim_set_platform_var(PL_IPHONE "iphone-.*")
@@ -92,23 +92,23 @@ omim_set_platform_var(PL_LINUX "linux-.*" ${LINUX_DETECTED})
 # Functions for using in subdirectories
 
 function(omim_add_test executable)
-    if (NOT ${NO_TESTS})
-        add_executable(${executable} ${OMIM_DIR}/testing/testingmain.cpp ${ARGN})
-    endif()
+  if (NOT ${NO_TESTS})
+    add_executable(${executable} ${OMIM_DIR}/testing/testingmain.cpp ${ARGN})
+  endif()
 endfunction()
 
 function(omim_add_test_subdirectory subdir)
-    if (NOT ${NO_TESTS})
-        add_subdirectory(${subdir})
-    endif()
+  if (NOT ${NO_TESTS})
+    add_subdirectory(${subdir})
+  endif()
 endfunction()
 
 function(omim_link_libraries target)
-    if (TARGET ${target})
-        target_link_libraries(${target} ${ARGN} ${CMAKE_THREAD_LIBS_INIT})
-    else()
-        message("~> Skipping linking the libraries to the target ${target} as it does not exist")
-    endif()
+  if (TARGET ${target})
+    target_link_libraries(${target} ${ARGN} ${CMAKE_THREAD_LIBS_INIT})
+  else()
+    message("~> Skipping linking the libraries to the target ${target} as it does not exist")
+  endif()
 endfunction()
 
 # End of functions for subdirectories
@@ -120,8 +120,8 @@ add_subdirectory(3party/succinct)
 add_subdirectory(3party/tomcrypt)
 
 add_compile_options(
-    "-Wall"
-    "-std=c++11"
+  "-Wall"
+  "-std=c++11"
 )
 
 add_subdirectory(base)
