Making stats compile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,4 +130,5 @@ add_subdirectory(coding)
 add_subdirectory(geometry)
 add_subdirectory(platform)
 add_subdirectory(3party/opening_hours)
+add_subdirectory(stats)
 #add_subdirectory(storage)
