--- a/android/3rd_party/BottomSheet/build.gradle
+++ b/android/3rd_party/BottomSheet/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
   repositories {
+    jcenter()
     mavenCentral()
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.1.3'
+    classpath 'com.android.tools.build:gradle:2.2.0'
   }
 }
 
