Fix OSRM build on macOS

--- a/3party/osrm/osrm-backend/CMakeLists.txt
+++ b/3party/osrm/osrm-backend/CMakeLists.txt
@@ -237,6 +237,10 @@ set(OMIM_LIBRARIES
   "${OMIM_BUILD_PATH}/libbase.a"
   "${OMIM_BUILD_PATH}/libjansson.a"
 )
+if(APPLE)
+  SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -dead_strip")
+endif()
+
 
 target_link_libraries(OSRM ${Boost_LIBRARIES})
 target_link_libraries(osrm-extract ${Boost_LIBRARIES})
