Cleaned up variables in conditionals.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,7 @@ omim_set_platform_var(PL_ANDROID "android-.*")
 omim_set_platform_var(PL_MAC "macx-.*" ${APPLE})
 omim_set_platform_var(PL_WIN "win32-.*" ${WIN32})
 
-if (${UNIX} AND (NOT ${PL_MAC}))
+if (UNIX AND (NOT PL_MAC))
   set(LINUX_DETECTED TRUE)
 else()
   set(LINUX_DETECTED FALSE)
@@ -92,13 +92,13 @@ omim_set_platform_var(PL_LINUX "linux-.*" ${LINUX_DETECTED})
 # Functions for using in subdirectories
 
 function(omim_add_test executable)
-  if (NOT ${NO_TESTS})
+  if (NOT NO_TESTS)
     add_executable(${executable} ${OMIM_DIR}/testing/testingmain.cpp ${ARGN})
   endif()
 endfunction()
 
 function(omim_add_test_subdirectory subdir)
-  if (NOT ${NO_TESTS})
+  if (NOT NO_TESTS)
     add_subdirectory(${subdir})
   endif()
 endfunction()
