OpenLR decoding, markup tool.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -228,6 +228,7 @@ add_subdirectory(search)
 add_subdirectory(tracking)
 add_subdirectory(traffic)
 add_subdirectory(partners_api)
+add_subdirectory(openlr)
 
 if (PLATFORM_DESKTOP)
   add_subdirectory(generator)
