--- a/xcode/common-debug.xcconfig
+++ b/xcode/common-debug.xcconfig
@@ -2,6 +2,8 @@
 
 COPY_PHASE_STRIP = NO
 GCC_OPTIMIZATION_LEVEL = 0
+GCC_UNROLL_LOOPS = NO
 ENABLE_NS_ASSERTIONS = YES
-GCC_PREPROCESSOR_DEFINITIONS = $(inherited) DEBUG=1
+GCC_PREPROCESSOR_DEFINITIONS = $(inherited) DEBUG _DEBUG
 MTL_ENABLE_DEBUG_INFO = YES
+ENABLE_TESTABILITY = YES
