--- a/xcode/common-release.xcconfig
+++ b/xcode/common-release.xcconfig
@@ -2,6 +2,8 @@
 
 COPY_PHASE_STRIP = YES
 GCC_OPTIMIZATION_LEVEL = 3
+GCC_UNROLL_LOOPS = YES
 ENABLE_NS_ASSERTIONS = NO
-GCC_PREPROCESSOR_DEFINITIONS = $(inherited) RELEASE=1
+GCC_PREPROCESSOR_DEFINITIONS = $(inherited) RELEASE _RELEASE NDEBUG OMIM_PRODUCTION
 MTL_ENABLE_DEBUG_INFO = NO
+ENABLE_TESTABILITY = NO
