--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,11 +2,13 @@ propMinSdkVersion=15
 # TODO use 23 target and build tools version, when ProGuard problem will be fixed
 # https://code.google.com/p/android/issues/detail?id=184567
 propTargetSdkVersion=22
+propCompileSdkVersion=23
 propBuildToolsVersion=22.0.1
 propVersionCode=650
 propVersionName=6.5.0
 propDebugNdkFlags=V=1 NDK_DEBUG=1 DEBUG=1
 propReleaseNdkFlags=V=1 NDK_DEBUG=0 PRODUCTION=1
+org.gradle.daemon=true
 
 # list of files for obb-s
 propObbFonts  ../data/01_dejavusans.ttf \
