--- a/platform/platform_tests_support/CMakeLists.txt
+++ b/platform/platform_tests_support/CMakeLists.txt
@@ -6,6 +6,8 @@ set(
   scoped_file.hpp
   scoped_mwm.cpp
   scoped_mwm.hpp
+  test_socket.cpp
+  test_socket.hpp
   writable_dir_changer.cpp
   writable_dir_changer.hpp
 )
