--- a/tracking/pytracking/CMakeLists.txt
+++ b/tracking/pytracking/CMakeLists.txt
@@ -8,12 +8,15 @@ add_compile_options(
     "-Wno-unused-local-typedef"
 )
 
-set(Boost_USE_STATIC_LIBS ON)
 set(Boost_USE_MULTITHREADED ON)
-set(Boost_USE_STATIC_RUNTIME ON)
+
+if (PLATFORM_MAC)
+  set(Boost_USE_STATIC_LIBS ON)
+  set(Boost_USE_STATIC_RUNTIME ON)
+endif()
 
 find_package(PythonLibs 2.7 REQUIRED)
-find_package(Boost 1.60 REQUIRED COMPONENTS python)
+find_package(Boost 1.54 REQUIRED COMPONENTS python)
 include_directories(${PYTHON_INCLUDE_DIRS})
 
 add_library(${PROJECT_NAME} MODULE ${SRC})
