Fix CMake build

--- a/tracking/pytracking/CMakeLists.txt
+++ b/tracking/pytracking/CMakeLists.txt
@@ -21,5 +21,5 @@ include_directories(${PYTHON_INCLUDE_DIRS})
 
 add_library(${PROJECT_NAME} MODULE ${SRC})
 
-omim_link_libraries(${PROJECT_NAME} ${PYTHON_LIBRARIES} ${Boost_LIBRARIES} base geometry coding tracking)
+omim_link_libraries(${PROJECT_NAME} ${PYTHON_LIBRARIES} ${Boost_LIBRARIES} tracking coding geometry base)
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
