--- a/editor/osm_auth_tests/CMakeLists.txt
+++ b/editor/osm_auth_tests/CMakeLists.txt
@@ -1,13 +1,15 @@
+project(osm_auth_tests)
+
 set(
   SRC
   osm_auth_tests.cpp
   server_api_test.cpp
 )
 
-omim_add_test(osm_auth_tests ${SRC})
+omim_add_test(${PROJECT_NAME} ${SRC})
 
 omim_link_libraries(
-  osm_auth_tests
+  ${PROJECT_NAME}
   editor
   platform
   platform_tests_support
@@ -17,17 +19,12 @@ omim_link_libraries(
   pugixml
   oauthcpp
   tomcrypt
-)
-
-target_link_libraries(
-  osm_auth_tests
   ${Qt5Widgets_LIBRARIES}
 )
 
 if (${PLATFORM_MAC})
-  target_link_libraries(
-    osm_auth_tests
-    ${Qt5Widgets_LIBRARIES}
+  omim_link_libraries(
+    ${PROJECT_NAME}
     "-framework Cocoa"
     "-framework IOKit"
     "-framework SystemConfiguration"
