--- a/platform/platform_tests/CMakeLists.txt
+++ b/platform/platform_tests/CMakeLists.txt
@@ -1,3 +1,5 @@
+project(platform_tests)
+
 add_definitions(-DOMIM_UNIT_TEST_WITH_QT_EVENT_LOOP)
 include_directories(${APL_SYSCON})
 
@@ -15,12 +17,24 @@ set(
   platform_test.cpp
 )
 
-omim_add_test(platform_tests ${SRC})
-omim_link_libraries(platform_tests platform_tests_support platform coding base jansson minizip tomcrypt ${LIBZ})
+omim_add_test(${PROJECT_NAME} ${SRC})
+omim_link_libraries(
+  ${PROJECT_NAME}
+  platform_tests_support
+  platform
+  coding
+  base
+  jansson
+  minizip
+  tomcrypt
+  ${LIBZ}
+)
 
 
 if (PLATFORM_MAC)
-  omim_link_libraries(platform_tests ${Qt5Widgets_LIBRARIES}
+  omim_link_libraries(
+    ${PROJECT_NAME}
+    ${Qt5Widgets_LIBRARIES}
     "-framework Cocoa"
     "-framework IOKit"
     "-framework QuartzCore"
@@ -29,5 +43,8 @@ if (PLATFORM_MAC)
 endif()
 
 if (PLATFORM_WIN OR PLATFORM_LINUX)
-  omim_link_libraries(platform_tests ${Qt5Network_LIBRARIES})
+  omim_link_libraries(
+    ${PROJECT_NAME}
+    ${Qt5Widgets_LIBRARIES}
+  )
 endif()
