[search] Switch to DFAs in search index retrieval.

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -20,10 +20,13 @@ set(
   const_helper.hpp
   deferred_task.cpp
   deferred_task.hpp
+  dfa_helpers.hpp
   exception.cpp
   exception.hpp
   gmtime.cpp
   gmtime.hpp
+  levenshtein_dfa.cpp
+  levenshtein_dfa.hpp
   limited_priority_queue.hpp
   logging.cpp
   logging.hpp
@@ -71,12 +74,15 @@ set(
   threaded_container.hpp
   threaded_list.hpp
   threaded_priority_queue.hpp
+  internal/message.cpp
+  internal/message.hpp
   timegm.cpp
   timegm.hpp
   timer.cpp
   timer.hpp
+  uni_string_dfa.cpp
+  uni_string_dfa.hpp
   worker_thread.hpp
-  internal/message.cpp
 )
 
 add_library(${PROJECT_NAME} ${SRC})
